--- a/Pipfile
+++ b/Pipfile
@@ -8,7 +8,7 @@ name = "pypi"
 aioredis = "~=1.3"
 sanic = "~=21.3"
 aiohttp = "~=3.7"
-discord-markdown = "~=0.4"
+jinja2 = "~=3.0"
 
 [dev-packages]
 black = "*"
