Make web rendering look good

--- a/dev-web/nginx.conf
+++ b/dev-web/nginx.conf
@@ -43,6 +43,10 @@ http {
             proxy_pass http://basil;
         }
 
+        location /series {
+            proxy_pass http://basil;
+        }
+
         location / {
             alias /usr/share/nginx/html/;
             autoindex off;
