Fix dev Docker config

--- a/dev-web/nginx.conf
+++ b/dev-web/nginx.conf
@@ -35,22 +35,21 @@ http {
 
         # add additional location blocks with proxy_pass directives to proxy other endpoint groups
 
-        location /api {
+        location /api/ {
             proxy_pass http://basil;
         }
 
-        location /snippet {
-            proxy_pass http://basil;
-        }
-
-        location /series {
+        location /series/ {
             proxy_pass http://basil;
         }
 
         location / {
             alias /usr/share/nginx/html/;
             autoindex off;
+
+            try_files $uri =404;
         }
+
 
         listen 80;
         server_name localhost;
