--- a/Pipfile
+++ b/Pipfile
@@ -5,10 +5,11 @@ name = "pypi"
 
 [packages]
 "discord.py" = "~=1.7"
-aioredis = "~=1.3"
+aioredis = "==2.0.0a1"
 sanic = "~=21.3"
 aiohttp = "~=3.7"
 jinja2 = "~=3.0"
+schema = "~=0.7"
 
 [dev-packages]
 black = "*"
